
   !	cppcheck the code. Fixed minor leaks in some error code. Removed
	dead code that only served as reminders what not to do.

   !	Complete replacement of cipher API based on previous IOCCC entry.

   !	Added extra hooks to MIME API. Added -j option to mime tool to
	dump email message as JSON output. Commissined by Vika S.

   !	Revised behaviour of TOKEN_KEEP_BACKSLASH and TOKEN_KEEP_QOUTES
	to be more clear and renamed the constants.

--1.75.30--

   !	Fixed pdqGet() to address the original CNAME->MX lookup issue
	reported by Steve Fregard for 1.75.19. Updated test.snert.net
	to better exercise these cases:

		pdq mx chain0.test.snert.net
		pdq mx chain1.test.snert.net

   !	Added .home to list of reserved TLDs.

--1.75.29--

   *	Upgraded SQLite to 3.8.4.3

  !!	Back out a PDQ change from 1.75.19 (b8ea01d8d3b) for CNAME->MX
	chain processing that broke CNAME loop and depth detection
	and caused an infinite loop crash. Reported by Steve Freegard.

  !!	Fix mccPutRowLocal() to always include the created timestamp.
	The SQLite behaviour for "INSERT OR REPLACE" is NOT the same as
	"INSERT" or "UPDATE"; the missing columns during a REPLACE subject
	to any CREATE TABLE defaults. Reported by Steve Freegard.

--1.75.28--

   *	Upgraded SQLite to 3.8.4.2

   *	Updated the TLD list.

   !	Added configure checks for some newer C99/C11 int types.

  !!    Fix problem with socket3_end_tls() handling of SSL_shutdown()
	driving CPU high on some systems.

--1.75.27--

  !!	Fix socket3_close_tls() and socket3_shutdown_tls() to both use
	socket3_end_tls() when terminating TLS connections.

   !	Fixed socket3_close_fd() read/discard loop to use socket3_read_fd(),
	instead of socket3_read() to avoid the read hook call.

--1.75.26--

   *    Upgraded SQLite to 3.8.1.0

   !	Minor fixes to aclocal.m4 libmilter detection for debian.

  !!	Fix numerous gcc compiler warnings. In particular fixed
	potential SPF seg.fault due to uninitialised variable. Also